--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
     "no-shadow": "off",
+    "react/no-unescaped-entities": "off",
     "react/destructuring-assignment": ["off"],
     "react/prefer-stateless-function": "off",
     "react/prop-types": "off",
